Cogna - Add clearDbBySrcId Form Editor - Dont show add bulk option when edit item Lambda - skip prompt for _param._body

--- a/src/app/design/editor/cogna-editor/cogna-editor.component.html
+++ b/src/app/design/editor/cogna-editor/cogna-editor.component.html
@@ -385,6 +385,14 @@
                               <fa-icon [icon]="['fas','file-waveform']" [fixedWidth]="true"></fa-icon>
                             } 
                           </button>
+                          <button type="button" class="btn btn-round btn-sm btn-danger" title="Clear DB Source"
+                            (click)="clearDbSrc(b)" [class.disabled]="clearDbSrcLoading()[b.id]">
+                            @if (clearDbSrcLoading()[b.id]) {
+                              <span class="spinner-border spinner-border-sm" aria-hidden="true"></span>
+                            }@else {
+                              <fa-icon [icon]="['fas','remove']" [fixedWidth]="true"></fa-icon>
+                            } 
+                          </button>
                           <button type="button" class="btn btn-round btn-sm btn-danger" title="Remove Source"
                             (click)="removeCognaSrc(b)">
                             <fa-icon [icon]="['fas','trash']" [fixedWidth]="true">
