Added current_tier & current_tier_id

--- a/src/app/design/editor/ui-editor/dashboard-editor/dashboard-editor.component.html
+++ b/src/app/design/editor/ui-editor/dashboard-editor/dashboard-editor.component.html
@@ -340,6 +340,8 @@
                         }
                         @if (editHolderFormSig().data?.tiers?.length>0) {
                           <option value="$_.current_status"># Current Status</option>
+                          <option value="$_.current_tier"># Current Tier Level</option>
+                          <option value="$_.current_tier_id"># Current Tier ID</option>
                         }
                       </select>
                     </div>
@@ -372,6 +374,8 @@
                         }
                         @if (editHolderFormSig().data?.tiers?.length>0) {
                           <option value="$_.current_status"># Current Status</option>
+                          <option value="$_.current_tier"># Current Tier Level</option>
+                          <option value="$_.current_tier_id"># Current Tier ID</option>
                         }
                       </select>
                     </div>
