Fix speech-to-text lang setting

--- a/src/app/_shared/modal/edit-dataset/edit-dataset.component.html
+++ b/src/app/_shared/modal/edit-dataset/edit-dataset.component.html
@@ -291,7 +291,7 @@
                 <div class="form-check form-switch mt-1">
                   <input class="form-check-input" type="checkbox" id="showStatus"
                     [(ngModel)]="_editDatasetData.showStatus" name="showStatus">
-                  <label class="form-check-label" for="showStatus">Show status</label>
+                  <label class="form-check-label" for="showStatus">Show status / Include Approval Info</label>
                 </div>
                 <div class="form-check form-switch mt-1">
                   <input class="form-check-input" type="checkbox" id="showIndex"
