New Module: REKA Signa - Digital Signature integration

--- a/src/app/design/editor/editor.component.html
+++ b/src/app/design/editor/editor.component.html
@@ -79,6 +79,9 @@
           <a class="bar-link" routerLink="krypta" routerLinkActive="active">
             <fa-icon [icon]="['fas', 'hashtag']" [fixedWidth]="true"></fa-icon>
           </a>
+          <a class="bar-link" routerLink="signa" routerLinkActive="active">
+            <fa-icon [icon]="['fas', 'signature']" [fixedWidth]="true"></fa-icon>
+          </a>
         </div>
       </div>
       <div class="content">
